<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp"
    android:backgroundTint="@color/item"
    app:cardCornerRadius="3dp"
    app:cardElevation="1dp"
    tools:ignore="TextSizeCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvDate"
            style="@style/text"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/date5"
            app:layout_constraintBottom_toTopOf="@+id/tvPress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvPress"
            style="@style/text"
            android:layout_marginTop="8dp"
            android:text="@string/pressure"
            app:layout_constraintBottom_toTopOf="@+id/tvWind"
            app:layout_constraintStart_toStartOf="@+id/tvDate"
            app:layout_constraintTop_toBottomOf="@+id/tvDate"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvWind"
            style="@style/text"
            android:layout_marginTop="4dp"

            android:text="@string/wind"
            app:layout_constraintEnd_toStartOf="@+id/tvDescription"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/tvPress"
            app:layout_constraintTop_toBottomOf="@+id/tvPress"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvWeek"
            style="@style/text"
            android:layout_marginStart="6dp"
            android:text="@string/week"
            android:textColor="@color/week"
            app:layout_constraintStart_toEndOf="@+id/tvDate"
            app:layout_constraintTop_toTopOf="@+id/tvDate"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvMaxMin5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/none"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/image"
            app:layout_constraintStart_toEndOf="@+id/tvWeek"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@+id/tvDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/text"
            android:layout_marginBottom="16dp"
            android:gravity="end"
            android:maxWidth="220dp"
            android:text="@string/none"
            app:layout_constraintTop_toTopOf="@+id/tvWind"
            app:layout_constraintEnd_toEndOf="@+id/image"
            app:layout_constraintStart_toEndOf="@+id/tvWind"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="TextContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>