<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/groundW">

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="2dp"
        tools:text="@tools:sample/cities"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:ignore="RelativeOverlap,TextContrastCheck" />

    <TextView
        android:id="@+id/tvTime"
        style="@style/text_small.tab"
        android:layout_alignBottom="@id/tvCity"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/tvCity"
        android:text="@string/time"
        android:textColor="@color/test"
        android:visibility="gone"
        tools:ignore="RelativeOverlap,TextContrastCheck" />

    <TextView
        android:id="@+id/tvCount"
        style="@style/text_small.tab"
        android:layout_alignBaseline="@+id/tvCity"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@+id/tvDateUpdate"
        tools:ignore="RelativeOverlap,TextContrastCheck"
        android:textColor="@color/test"
        android:visibility="invisible"
        android:text="@string/none"/>

    <TextView
        android:id="@+id/tvDateUpdate"
        style="@style/text_small.tab"
        android:textColor="@color/test"
        android:layout_alignBaseline="@+id/tvCity"
        android:layout_marginEnd="16dp"
        android:layout_alignParentEnd="true"
        tools:ignore="TextContrastCheck"
        tools:text="@tools:sample/date/hhmm"/>

    <TextView
        android:id="@+id/tvLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/tvCity"
        android:layout_alignParentStart="true"
        android:layout_marginTop="2dp"
        android:background="@color/gray" />

    <TextClock
        android:id="@+id/tcDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLine"
        android:layout_alignStart="@+id/tvCity"
        android:layout_marginTop="2dp"
        android:format24Hour="d LLL EEE."
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

    <TextClock
        android:id="@+id/tcTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tcDate"
        android:layout_alignStart="@+id/tvCity"
        android:layout_marginTop="0dp"
        android:format24Hour="H:mm"
        android:textColor="@color/white"
        android:textSize="30sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLine"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:layout_toStartOf="@id/image"
        android:layout_toEndOf="@id/tcTime"
        android:gravity="center"
        tools:text="25°C"
        android:textColor="@color/white"
        android:textSize="28sp"
        tools:ignore="RelativeOverlap,TextContrastCheck" />

    <TextView
        android:id="@+id/tvMinMax"
        style="@style/text_small.tab"
        android:layout_below="@id/tvTemp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="4dp"
        android:layout_toStartOf="@id/image"
        android:layout_toEndOf="@id/tcTime"
        android:gravity="center"
        tools:text="25/12°C"
        tools:ignore="RelativeOverlap,TextContrastCheck" />

    <TextView
        android:id="@+id/tvHumidity"
        style="@style/text_small.tab"
        android:layout_below="@id/tcTime"
        android:layout_alignStart="@id/tvCity"
        android:layout_marginTop="8dp"
        android:text="@string/humidity"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvWind"
        style="@style/text_small.tab"
        android:layout_alignStart="@+id/tvCity"
        android:layout_below="@+id/tvHumidity"
        android:layout_marginTop="4dp"
        android:text="@string/wind"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvPressure"
        style="@style/text_small.tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:layout_below="@id/tvWind"
        android:layout_alignStart="@id/tvCity"
        android:layout_marginTop="4dp"
        android:text="@string/pressure"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/tvLine"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/todo"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/day_0" />

    <TextView
        android:id="@+id/tvCondition"
        style="@style/text_small.tab"
        android:layout_alignTop="@id/tvHumidity"
        android:layout_alignEnd="@id/image"
        android:layout_marginStart="4dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/tvHumidity"
        android:gravity="end"
        tools:text="@string/wmo0"
        tools:ignore="RtlHardcoded,TextContrastCheck" />

    <FrameLayout
        android:id="@+id/flUpdate"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tvWind"
        android:layout_alignParentEnd="true"
        android:paddingBottom="6dp"
        android:layout_marginEnd="4dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:src="@drawable/sync4"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/pbProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:indeterminateDrawable="@drawable/anim_button"
            android:visibility="invisible" />
    </FrameLayout>

</RelativeLayout>